syntax = "proto3";
package service;
option go_package = "./service";

message HelloRequest {
    string req = 1;
}

message HelloResponse {
    string res = 1;
}

service HelloService {
    rpc SayHello(HelloRequest) returns(HelloResponse);
}